<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <!--NO CONSIDERAR ESTA LAYOUT EN LA APP-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <Button
            android:id="@+id/boton_agregaJugador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="agregaJugadores"
            android:text="@string/boton_agregaJugadores" />
        <EditText
            android:id="@+id/IDBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="Ingrese el ID a buscar" />
        <Button
            android:id="@+id/boton_buscaJugadorPorId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buscaJugadorPorId"
            android:text="@string/boton_buscaJugadorPorId" />
        <EditText
            android:id="@+id/NombreBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="Ingrese el Nombre a buscar" />
        <Button
            android:id="@+id/boton_buscaJugadorPorNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buscaJugadorPorNombre"
            android:text="@string/boton_buscaJugadorPorNombre" />
        <EditText
            android:id="@+id/IDEliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="Ingrese el ID a eliminar" />
        <Button
            android:id="@+id/boton_eliminaJugador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="eliminaJugadorPorId"
            android:text="@string/boton_eliminaJugador" />
        <EditText
            android:id="@+id/IDAgregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="Ingrese el ID a actualizar" />
        <EditText
            android:id="@+id/NombreAgregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="Ingrese el nombre a actualizar" />
        <EditText
            android:id="@+id/PartidasAgregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="Ingrese el numero de partidas" />
        <EditText
            android:id="@+id/VictoriasAgregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="Ingrese el numero de victorias" />
        <EditText
            android:id="@+id/DerrotasAgregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="Ingrese el numero de derrotas" />
        <Button
            android:id="@+id/boton_actualizaJugador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="actualizaJugador"
            android:text="@string/boton_actualizaJugador" />
        <Button
            android:id="@+id/boton_muestraJugadores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="muestraJugadores"
            android:text="@string/boton_muestraJugadores" />
        <Button
            android:id="@+id/boton_eliminaJugadores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="eliminaJugadores"
            android:text="@string/boton_eliminaJugadores" />
    </LinearLayout>
</ScrollView>